Fix events alignment

--- a/web/resources/css/style.css
+++ b/web/resources/css/style.css
@@ -361,6 +361,14 @@ hr.hr1{
     
 }
 
+.event-content{
+    padding: 1rem;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    text-align: center;
+}
+
 .event-news-first-image{
     width: 100%;
     
@@ -380,6 +388,14 @@ hr.hr1{
 }
 .modal-body{
     padding: 0;
+}
+
+.modal-dialog{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10%;
 }
 
 .underline-event{
